--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 PrecoPublico: document.getElementById('txbPrecoPublico').value,
                 PrecoVenda: document.getElementById('txbPrecoVenda').value,
                 DataCompra: document.getElementById('txbDataCompra').value,
-                Prazo: document.getElementById('txbPrazo').value,
+                //Prazo: document.getElementById('txbPrazo').value,
                 Loja: document.getElementById('txbLoja').value,
                 Pagamento: document.getElementById('txbPagamento').value,
                 PlacaUsado: document.getElementById('placaUsado').value,
@@ -479,7 +479,7 @@
                 'txbEmail', 'txbCPFCNPJ', 'txbCEP', 'txbEndereco', 'txbNumero',
                 'txbBairro', 'txbCidade', 'txbEstado', 'txbCategoria', 'txbDesconto',
                 'ddlModels', 'txbQtde', 'txbAno', 'txbModelo', 'txbCor',
-                'txbPrecoPublico', 'txbPrecoVenda', 'txbDataCompra', 'txbPrazo'
+                'txbPrecoPublico', 'txbPrecoVenda', 'txbDataCompra', 
             ];
 
             // Verificar cada campo obrigatório
