--- a/resultContratoVD.html
+++ b/resultContratoVD.html
@@ -170,7 +170,7 @@
             <p><strong>DADOS PARA FECHAMENTO DO PEDIDO</strong></p>            
             <p>Data da Compra: <span id="lbDataCompra"> - </span></p>
             <p>Concessionária de Entrega: <span id="lbConcessionaria"> - </span></p>
-            <p>Prazo de Entrega: <span id="lbPrazo"> - </span> De  acordo  com  o faturamento  e  a  entrega do  veículo na  concessionária  pela  montadora.</p>
+            <p>Prazo de Entrega: <span id="lbPrazo"> </span> De  acordo  com  o faturamento  e  a  entrega do  veículo na  concessionária  pela  montadora.</p>
             <p>Forma de Pagamento: <span id="lbFormaPagamento"> - </span></p>
             <div class="container p-4">
                 <p><strong>LI, ESTOU CIENTE E DE ACORDO COM AS CLÁUSULAS ACIMA  DESCRITAS.</strong></p>
