--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="sidebar" class='active'>
                 <div class="sidebar-wrapper active">
                     <div class="sidebar-header">
-                        <img src="../Images/AutomaxLogo.png" class="w-100" alt="" srcset=""/>
+                        <img src="#" class="w-100" alt="" srcset=""/>
                     </div>
                     <div class="sidebar-menu">
                         <ul class="menu">
