--- a/ContratoEcommerce.html
+++ b/ContratoEcommerce.html
@@ -87,13 +87,13 @@
                     <div class="page-title">
                         <div class="row">
                             <div class="col-12 col-md-6 order-md-1 order-last">
-                                <h3>Contrato ECommerce</h3>
+                                <h3>Contrato E-Commerce</h3>
                                 <p class="text-subtitle text-muted">Preencha os campos para continuar</p>
                             </div>
                             <div class="col-12 col-md-6 order-md-2 order-first">
                                 <nav aria-label="breadcrumb" class='breadcrumb-header'>
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="#">ContratoAutomax</a></li>
+                                        <li class="breadcrumb-item"><a href="#">Contrato Automax</a></li>
                                         <li class="breadcrumb-item active" aria-current="page">Contrato E-Commerce</li>
                                     </ol>
                                 </nav>
@@ -181,7 +181,7 @@
                                                  <div class="col-md-3 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-colunm">CEP</label>                                                        
-                                                        <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9" placeholder="CEP" required/>
+                                                        <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9" onblur="pesquisacep(this.value);" placeholder="CEP" required/>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-7 col-12">
