--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                                  <div class="col-md-3 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-colunm">CEP</label>                                                        
-                                                        <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9" placeholder="CEP" required/>
+                                                        <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9" onblur="pesquisacep(this.value);" placeholder="CEP" required/>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-7 col-12">
