--- a/ContratoEcommerce.html
+++ b/ContratoEcommerce.html
@@ -182,6 +182,7 @@
                                                     <div class="form-group">
                                                         <label for="email-id-colunm">CEP</label>                                                        
                                                         <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9" onblur="pesquisacep(this.value);" placeholder="CEP" required/>
+                                                        <button type="button" class="btn btn-primary mt-2" id="searchCep">Buscar Endereço</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-7 col-12">
