--- a/ContratoEcommerce.html
+++ b/ContratoEcommerce.html
@@ -185,20 +185,20 @@
                                                  <div class="col-md-3 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-colunm">CEP</label>                                                        
-                                                        <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9" onblur="pesquisacep(this.value);" placeholder="CEP" required/>
+                                                        <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9"  placeholder="CEP" required/>
                                                         <button type="button" class="btn btn-primary mt-2" id="searchCep">Buscar Endereço</button>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-7 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-column">Endereço</label>
-                                                        <input type="text" id="txbEndereco" class="form-control" name="email-id-column" placeholder="Endereço" required>
+                                                        <input type="text" id="txbEndereco" class="form-control" name="Endereco" placeholder="Endereço" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-2 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-column">Número</label>
-                                                        <input type="text" id="txbNumero" class="form-control" name="email-id-column" placeholder="Número" required>
+                                                        <input type="text" id="txbNumero" class="form-control" name="Numero" placeholder="Número" required>
                                                     </div>
                                                 </div>
                                             </div>
@@ -206,25 +206,25 @@
                                                 <div class="col-md-4 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-column">Bairro</label>
-                                                        <input type="text" id="txbBairro" class="form-control" name="email-id-column" placeholder="Bairro" required>
+                                                        <input type="text" id="txbBairro" class="form-control" name="Bairro" placeholder="Bairro" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-3 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-colunm">Complemento</label>
-                                                        <input type="text" id="txbComplemento" class="form-control" name="email-id-colum" placeholder="Complemento" />
+                                                        <input type="text" id="txbComplemento" class="form-control" name="Complemento" placeholder="Complemento" />
                                                     </div>
                                                 </div>                                               
                                                 <div class="col-md-3 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-column">Cidade</label>
-                                                        <input type="text" id="txbCidade" class="form-control" name="email-id-column" placeholder="Cidade" required>
+                                                        <input type="text" id="txbCidade" class="form-control" name="Cidade" placeholder="Cidade" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-2 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-column">Estado</label>
-                                                        <input type="text" id="txbEstado" class="form-control" name="email-id-column" placeholder="Estado" required>
+                                                        <input type="text" id="txbEstado" class="form-control" name="Estado" placeholder="Estado" required>
                                                     </div>
                                                 </div>
                                             </div>
