--- a/ContratoEcommerce.html
+++ b/ContratoEcommerce.html
@@ -185,7 +185,7 @@
                                                  <div class="col-md-3 col-12">
                                                     <div class="form-group">
                                                         <label for="email-id-colunm">CEP</label>                                                        
-                                                        <input name="cep" type="text" id="txbCEP" class="mascCEP form-control" value="" size="10" maxlength="9"  placeholder="CEP" required/>
+                                                        <input name="cep" type="text"id="CEP" class="mascCEP form-control" value="" size="10" maxlength="9"  placeholder="CEP" required/>
                                                         <button type="button" class="btn btn-primary mt-2" id="searchCep">Buscar Endereço</button>
                                                     </div>
                                                 </div>
