--- a/ContratoEcommerce.html
+++ b/ContratoEcommerce.html
@@ -50,7 +50,7 @@
                                 <span>Contrato PEUGEOT-CITROEN VD</span>
                                 </a>
                             </li>
-                            <!--li class="sidebar-item has-sub">
+                            <li class="sidebar-item has-sub">
                                 <a href="#" class="sidebar-link">
                                     <i data-feather="settings" width="20"></i>
                                     <span>Configurações</span>
@@ -72,7 +72,7 @@
                                     <i data-feather="log-out" width="20"></i>
                                     <span>Sair</span>
                                 </a>
-                            </li><!-->
+                            </li>
                         </ul>
                     </div>
                     <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
@@ -523,6 +523,6 @@
     <script src="/public/assets/js/app.js"></script>
     <script src="/public/assets/js/main.js"></script>
 
-    <script src="./public/Scripts/ValidaCampos.js"></script>
+    <!--script src="./public/Scripts/ValidaCampos.js"></script-->
 </body>
 </html>
