--- a/ContratoEcommerce.html
+++ b/ContratoEcommerce.html
@@ -6,7 +6,8 @@
     <title>Contrato Automax - ECommerce</title>
 
     <link rel="stylesheet" href="/public/assets/css/bootstrap.css"/>
-    <link rel="stylesheet" href="/public/assets/vendors/perfect-scrollbar/perfect-scrollbar.css"/>
+    <link rel="stylesheet" href="./public/assets/vendor/perfect-scrollbar/perfect-scrollbar.css"/>
+    <link rel="stylesheet" href="./public/assets/vendor/perfect-scrollbar/perfect-scrollbar.css"/>
     <link rel="stylesheet" href="/public/assets/css/app.css"/>
     <link rel="shortcut icon" href="/public/assets/images/favicon.svg" type="image/x-icon"/>
     <!-- jQuery -->
@@ -32,7 +33,7 @@
             <div id="sidebar" class='active'>
                 <div class="sidebar-wrapper active">
                     <div class="sidebar-header">
-                        <img src="../Images/AutomaxLogo.png" class="w-100" alt="" srcset=""/>
+                        <img src="/public/assets/images/AutomaxLogo.png" class="w-100" alt="" srcset=""/>
                     </div>
                     <div class="sidebar-menu">
                         <ul class="menu">
@@ -49,30 +50,7 @@
                                      <i data-feather="file-text" width="20"></i>
                                 <span>Contrato PEUGEOT-CITROEN VD</span>
                                 </a>
-                            </li>
-                            <li class="sidebar-item has-sub">
-                                <a href="#" class="sidebar-link">
-                                    <i data-feather="settings" width="20"></i>
-                                    <span>Configurações</span>
-                                </a>
-                                <ul class="submenu">
-                                    <li>
-                                        <a href="ChangePassword.aspx">Mudar Senha</a>
-                                    </li>
-                                    <li>
-                                        <a href="Usuarios.aspx" id="MenuAdm1">Usuários</a>
-                                    </li>
-                                    <li>
-                                        <a href="ChangePassword.aspx" id="MenuAdm2">Modelos</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="sidebar-item">
-                                <a href="Login.aspx" class='sidebar-link'>
-                                    <i data-feather="log-out" width="20"></i>
-                                    <span>Sair</span>
-                                </a>
-                            </li>
+                            </li>                         
                         </ul>
                     </div>
                     <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
