--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            
+
                                             <div class="row">
                                                 <div class="col-md-6 col-12">
                                                     <div class="form-group">
@@ -518,10 +518,10 @@
         
         </script>
     <script src="/public/assets/js/feather-icons/feather.min.js"></script>
-    <script src="/public/assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="/public/assets/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script src="/public/assets/js/app.js"></script>
     <script src="/public/assets/js/main.js"></script>
 
-    <script src="./public/Scripts/ValidaCampos.js"></script>
+    <!--script src="./public/Scripts/ValidaCampos.js"></script-->
 </body>
 </html>
