--- a/ContratoEcommerce.html
+++ b/ContratoEcommerce.html
@@ -39,13 +39,13 @@
                         <ul class="menu">
                             <li class='sidebar-title'>Menu</li>
        
-                            <li class="sidebar-item active" id="menuContratoVD">
+                            <li class="sidebar-item " id="menuContratoVD">
                                 <a href="index.html" class='sidebar-link'>
                                     <i data-feather="file-text" width="20"></i>
                                     <span>Contrato FIAT VD</span>
                                 </a>
                             </li>
-                            <li class="sidebar-item" id="menuContratoE_commerce">
+                            <li class="sidebar-item active" id="menuContratoE_commerce">
                                 <a href="ContratoEcommerce.html" class='sidebar-link'>
                                      <i data-feather="file-text" width="20"></i>
                                 <span>Contrato PEUGEOT-CITROEN VD</span>
