--- a/resultContratoVD.html
+++ b/resultContratoVD.html
@@ -341,8 +341,8 @@
             const opt = {
                 margin: 10,
                 filename: 'Contrato_Vendas_Diretas.pdf',
-                image: { type: 'jpeg', quality: 1 },   // qualidade máxima
-                html2canvas: { scale: 3, useCORS: true }, // aumenta a resolução
+                image: { type: 'png', quality: 1 },   // qualidade máxima
+                html2canvas: { scale: 4, useCORS: true }, // aumenta a resolução
                 jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
             };
 
